# geographies

./: .gitignore  README.md  aux.py  create_field_references.py  main.py  pyproject.toml
conf/: relationship_files.csv  tiger_mi_sources.csv
conf/field_references/: tab20_tract20_tract10_natl.json  tl_2009_26_zcta5.json  tl_2010_26_tract00.json  tl_2010_26_tract10.json  tl_2012_us_cd112.json  tl_2017_26_elsd.json  tl_2019_26_unsd.json  tl_2020_us_zcta510.json  tl_2020_us_zcta520.json  tl_2021_us_cd116.json  tl_2022_26_sldu.json  tl_2024_26_cousub.json  tl_2024_26_elsd.json  tl_2024_26_sldl.json  tl_2024_26_sldu.json  tl_2024_26_tract.json  tl_2024_us_county.json  tl_2024_us_state.json
sql/: 0001_create_etl_geographies.sql  0002_create_adjacency.sql
