[project]
name = "canonical-geographies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.1",
    "pandas>=2.3.2",
    "pandera>=0.26.1",
    "psycopg>=3.2.9",
    "sqlalchemy>=2.0.43",
]
